# sage

./: .gitignore  .golangci.yml  .goreleaser.yaml  Makefile  PHASE1_IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  SECURITY_FAQ.md  buf.gen.yaml  glama.json  go.mod  go.sum  server.json
.github/workflows/: ci.yml  release.yml
api/: openapi.yaml
api/rest/: access_handler.go  agent_handler.go  dept_handler.go  embed_handler.go  handlers_test.go  helpers.go  memory_handler.go  org_handler.go  server.go  vote_handler.go
cmd/amid/: main.go
cmd/sage-cli/: main.go
cmd/sage-gui/: config.go  main.go  mcp.go  mcp_test.go  migrate.go  node.go  quorum.go  seed.go  vault.go  wizard.go
cmd/sage-launcher/: main.go
cmd/sage-lite/: main.go  mcp.go  migrate.go  migrate_test.go  node.go  quorum.go  wizard.go
deploy/: Dockerfile.abci  Dockerfile.node  docker-compose.monitoring.yml  docker-compose.yml  init-testnet.sh  init.sql
deploy/monitoring/: alerts.yml  prometheus.yml
deploy/scripts/: backup-cometbft.sh  backup-postgres.sh
docs/: ARCHITECTURE.md  Agent Memory Infrastructure - WHITEPAPER.md  Empirical_Validation_Methodology.md  GETTING_STARTED.md  connect.html  index.html
e2e/: agent-identity.spec.js  dashboard.spec.js  network.spec.js
extension/: build.sh  manifest.firefox.json  store-listing.md
extension/chrome/: README.md  manifest.json  popup.html
scripts/: setup_studio_org.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: async_example.py  full_lifecycle.py  multi_agent.py  quickstart.py
sdk/python/src/sage_sdk/: __init__.py  async_client.py  auth.py  client.py  exceptions.py  models.py
sdk/python/tests/: conftest.py  test_async_client.py  test_auth.py  test_client.py  test_dept_rbac.py  test_models.py  test_org_federation.py
web/: autostart.go  handler.go  handler_ledger.go  handler_ledger_test.go  handler_memorymode_test.go  handler_test.go  import.go  import_realdata_test.go  import_test.go  network_handler.go  sse.go  update_handler.go  update_handler_test.go
(+1899 files in other folders)
