[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-agent-sdk"
version = "1.0.0"
description = "Python SDK for SAGE — Sovereign Agent Governed Experience. Persistent, consensus-validated memory for AI agents."
readme = "README.md"
authors = [{name = "Dhillon Andrew Kannabhiran", email = "dhillon@levelupctf.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["sage", "ai", "agent", "memory", "bft", "consensus", "llm", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "PyNaCl>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/l33tdawg/sage"
Documentation = "https://l33tdawg.github.io/sage/"
Repository = "https://github.com/l33tdawg/sage"
Issues = "https://github.com/l33tdawg/sage/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]
